--- a/src/Example/ListUser.scss
+++ b/src/Example/ListUser.scss
@@ -1,38 +1,68 @@
 .table-container {
-    width: 100%;
-    margin: 5px 0 0 0;
+    // width: 100%;
+    // margin: 5px 0 0 0;
 
-    .table-title {
-        text-transform: uppercase;
-        text-align: center;
-        padding: 5px;
+    .row-table-title {
+        .title {
+            text-transform: uppercase;
+            text-align: center;
+            padding: 5px;
+            font-weight: 600;
+        }
+
     }
 
-    .table-content {
-        text-align: center;
-        margin-left: auto;
-        margin-right: auto;
+    .row-table-content {
+        .btn-add-new {
+            .btn-new {
+                width: 100px;
+                height: auto;
+                outline: none;
+                border: none;
+                background-color: rgb(231, 85, 85);
+                border-radius: 5px;
+                margin-bottom: 5px;
+                padding: 5px;
 
-        table {
-            font-family: arial, sans-serif;
-            border-collapse: collapse;
-            width: 100%;
+                &:hover {
+                    background-color: orange;
+                    color: blue;
+                }
+
+            }
         }
 
-        th {
-            background-color: orange;
-            text-align: center !important;
-        }
+        .col-table-content {
+            .table-content {
+                width: 100%;
+                // text-align: center;
+                // margin-left: auto;
+                // margin-right: auto;
 
-        td,
-        th {
-            border: 1px solid lightcyan;
-            text-align: left;
-            padding: 8px;
-        }
 
-        tr:nth-child(even) {
-            background-color: lightblue;
+
+                table {
+                    font-family: arial, sans-serif;
+                    border-collapse: collapse;
+                    // width: 100%;
+                }
+
+                th {
+                    background-color: orange;
+                    text-align: center !important;
+                }
+
+                td,
+                th {
+                    border: 1px solid lightcyan;
+                    text-align: left;
+                    padding: 8px;
+                }
+
+                tr:nth-child(even) {
+                    background-color: lightblue;
+                }
+            }
         }
     }
 }
