--- a/src/auth/Login.scss
+++ b/src/auth/Login.scss
@@ -8,7 +8,7 @@
         .ad-left {}
 
         .login-content {
-            margin: 0 0 0 5px;
+            padding: 0 0 0 5px;
 
             .text-login {
                 text-transform: uppercase;
