--- a/src/components/HomeHeader.scss
+++ b/src/components/HomeHeader.scss
@@ -1,54 +1,3 @@
-// .nav-container {
-//     display: flex;
-//     flex-direction: row;
-//     background-color: gray;
-//     width: 100%;
-
-//     .left-nav {
-//         // overflow: hidden;
-//         width: 40%;
-
-//         a {
-//             float: left;
-//             color: #f2f2f2;
-//             text-align: center;
-//             padding: 14px 16px;
-//             text-decoration: none;
-//             font-size: 17px;
-//         }
-
-//         a:hover {
-//             background-color: #ddd;
-//             color: black;
-//         }
-
-//         a.active {
-//             background-color: #04AA6D;
-//             color: white;
-//         }
-//     }
-
-//     .middle-nav {
-//         width: 20%;
-//     }
-
-//     .right-nav {
-//         width: 40%;
-//         display: flex;
-//         flex-direction: row;
-//         // overflow: hidden;
-//         float: right;
-//         gap: 20px;
-//         justify-content: flex-end;
-
-//         color: #f2f2f2;
-//         font-size: 17px;
-//         // text-align: center;
-//         // text-decoration: none;
-
-//     }
-// }
-
 .home-header-container {
 
     .home-header-content {
@@ -63,14 +12,12 @@
         align-items: center;
         flex-wrap: wrap;
 
-
         .left-content {
             width: 10%;
             padding: 0 0 0 0px;
             background: url('../assets/logoWeb.svg') center center no-repeat;
             height: 100%;
             cursor: pointer;
-
         }
 
         .center-content {
@@ -80,36 +27,64 @@
             gap: 5px;
             height: 100%;
 
-            .active {
+            .active1 {
                 background: lightcoral;
             }
 
             .child-content-center {
+                width: 100px;
+                height: 100%;
                 cursor: pointer;
-                justify-content: center;
 
                 a {
-                    height: inherit;
+                    position: relative;
+                    top: 20px;
+                    height: 100%;
                     color: white;
                     text-decoration: none;
+                    display: block;
+                    text-align: center;
 
                     &:hover {
                         color: blue;
                     }
                 }
-
-
             }
         }
 
         .right-content {
+            height: 100%;
             width: 35%;
             display: flex;
             flex-direction: row;
             justify-content: flex-end;
-            gap: 20px;
+            // padding: 0 10px 0 0;
 
-            padding: 0 10px 0 0;
+            .child-content-right {
+                width: 100px;
+                height: fit-content;
+                position: relative;
+                top: 20px;
+                text-align: center;
+                cursor: pointer;
+            }
+
+            .language {
+
+                .select-language {
+                    width: 70%;
+                    border: none;
+                    outline: none;
+
+                    .option-language {
+
+                        // height: 60px;
+                        &:hover {
+                            background: blueviolet;
+                        }
+                    }
+                }
+            }
         }
     }
 }
